--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img{
     position: absolute;
     width: var(--sizew);
     height: var(--sizeh);
-    left:-600px;
+    left:0;
     top: 0;
     margin: 0;
     padding: 0;
@@ -47,12 +47,12 @@ img{
 .containerImg:hover .btnsControler{
     display: block;
 }
-.containerMiniatura{
+#containerMiniatura{
     position: relative;
     background: url('img/fundo.png');
     width: auto;
     z-index: 2;
-    padding: 10px;
+    padding: 3px;
     color: white;
     --tamanho: 30px;
     height: var(--tamanho);
@@ -62,6 +62,34 @@ img{
     align-items: center;
     display: none;
 }
-.containerImg:hover .containerMiniatura{
+.containerImg:hover #containerMiniatura{
     display: flex;
+}
+.divMini{
+    position: relative;
+    top:0;
+    left:0;
+    width: 20px;
+    height: 20px;
+    border: thin solid blue;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    margin: 3px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.imgMini{
+    position: absolute;
+    top:-110px;
+    left: 0;
+    width: 150px;
+    height: 100px;
+    display: none;
+    z-index: 3;
+}
+.divMini:hover .imgMini{
+    display: block;
 }
