--- a/style.css
+++ b/style.css
@@ -1,23 +1,30 @@
 :root{
-    --sizeh:400px;
-    --sizew:600px;
+    --sizeh:640px;
+    --sizew:100%;
+}
+.containerImg *{
+    margin: 0;
+    padding: 0;
+    left: 0;
+    top: 0;
 }
 .containerImg{    
     position: relative;
-    width: 600px;
-    height: 400px;
+    width: var(--sizew);
+    height: var(--sizeh);
     border: thin solid black;
     overflow: hidden;
     box-sizing: border-box;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    align-items: center;
 }
 img{
     position: absolute;
     width: var(--sizew);
     height: var(--sizeh);
-    left:0;
+    left:-100%;
     top: 0;
     margin: 0;
     padding: 0;
@@ -30,14 +37,15 @@ img{
     background: url('img/fundo.png');
     position: absolute;
     left: 0;
-    top: 0;
+    top: calc(50% - 40px);
     z-index: 2;
     border: none;
     width: 80px;
     color: #fff;
-    height: 100%;
+    height: 80px;
     display: none;
     cursor: pointer;
+    z-index: 3;
 }
 .avancar{
     left: auto;
@@ -48,18 +56,19 @@ img{
     display: block;
 }
 #containerMiniatura{
-    position: relative;
+    position: absolute;
     background: url('img/fundo.png');
-    width: auto;
+    width: 100%;
     z-index: 2;
     padding: 3px;
     color: white;
     --tamanho: 30px;
-    height: var(--tamanho);
-    top:  calc(100% - var(--tamanho) - 20px);
+    height: var(--tamanho);    
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    top:  calc(100% - 35px);
     display: none;
 }
 .containerImg:hover #containerMiniatura{
@@ -70,7 +79,7 @@ img{
     top:0;
     left:0;
     width: 20px;
-    height: 20px;
+    height: auto;
     border: thin solid blue;
     background: #fff;
     display: flex;
@@ -80,15 +89,15 @@ img{
     margin: 3px;
     border-radius: 3px;
     cursor: pointer;
+    user-select: none;
 }
 .imgMini{
     position: absolute;
-    top:-110px;
+    top:-90px;
     left: 0;
-    width: 150px;
-    height: 100px;
+    width: 120px;
+    height: 80px;
     display: none;
-    z-index: 3;
 }
 .divMini:hover .imgMini{
     display: block;
