--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
     --sizeh:400px;
     --sizew:800px;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 .containerImg *{
     margin: 0;
     padding: 0;
